@@ -93,7 +93,6 @@ div.calendar {
 .calendar tbody td.active { /* Active (pressed) cells <TD> */
 	background: #000000;
 	color: #ffffff;
-	padding: 2px 2px 0px 2px;
 }
 
 .calendar tbody td.weekend { /* Cells showing weekend days */
@@ -102,16 +101,12 @@ div.calendar {
 
 .calendar tbody td.selected { /* Cell showing today date */
 	font-weight: bold;
-	border: 1px solid #000;
-	padding: 1px 3px 1px 1px;
 	background: #000000;
 	color: #ffffff;
 }
 
 .calendar tbody td.hilite { /* Hovered cells <TD> */
 	background: #999999;
-	padding: 1px 3px 1px 1px;
-	border: 1px solid #666666;
 	color: #ffffff;
 }
 
