@@ -30,6 +30,7 @@ $ -> Language fix or change
  # [#30691] TinyMCE shows buttons with onclick attribute without space and duplicate class. Thanks Dennis Hermatski.
  # [#30125] Search module does not take into account the 'search only' selected. Thanks Brian Teeman.
  # [#30797] *Wrapper module url field should be required. Thanks Jean-Marie Simonet.
+ # [#30017] Problems with calendar pop up in Chrome. Thanks Achal Aggarwal.
 
 05-May-2013 Michael Babker
  # [#30727] A unpublished or deleted tag is still visible in 'List of all tags' menu item.  Thanks David Hurley
